--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ethers": "^6.13.5",
     "framer-motion": "^12.6.5",
     "jotai": "^2.12.2",
+    "lightweight-charts": "^5.0.6",
     "lucide-react": "^0.487.0",
     "next": "15.1.5",
     "next-themes": "^0.4.6",
@@ -39,7 +40,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "recharts": "^2.15.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "three": "^0.175.0",
