--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
@@ -72,6 +72,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "stylelint": "^16.17.0",
