--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
     "lint:style": "stylelint \"**/*.{css,less,scss,sass}\"",
     "format": "prettier --write \"**/*.{js,.jsx,.ts,.tsx,json,css,less,scss,sass}\"",
-    "prepare": "husky install",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "yarn run pages:build && wrangler pages dev",
-    "deploy:cf": "yarn run pages:build && wrangler pages deploy"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@ethersproject/bignumber": "^5.8.0",
@@ -30,7 +27,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
-    "framer-motion": "^12.6.5",
     "jotai": "^2.12.2",
     "lightweight-charts": "^5.0.6",
     "lucide-react": "^0.487.0",
@@ -38,6 +34,7 @@
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.3",
@@ -48,11 +45,9 @@
     "wagmi": "^2.14.16"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.12",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
-    "@opennextjs/cloudflare": "^0.3.8",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.0.9",
     "@types/node": "^20",
@@ -79,9 +74,7 @@
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^37.0.0",
     "tailwindcss": "^4.0.9",
-    "typescript": "5.7.3",
-    "vercel": "^41.5.0",
-    "wrangler": "^3.103.2"
+    "typescript": "5.7.3"
   },
   "license": "MIT",
   "lint-staged": {
