--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^37.0.0",
     "tailwindcss": "^4.0.9",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "vercel": "^41.7.0",
+    "wrangler": "^4.13.2"
   },
   "license": "MIT",
   "lint-staged": {
