--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "prepare": "husky install",
     "pages:build": "npx @cloudflare/next-on-pages",
     "preview": "npm run pages:build && wrangler pages dev",
-    "deploy:cf": "npm run pages:build && wrangler pages deploy"
+    "deploy:cf": "npm run pages:build && wrangler pages deploy",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run",
+    "test:e2e:open": "start-server-and-test dev http://localhost:3000 cypress:open"
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
@@ -61,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "critters": "^0.0.25",
+    "cypress": "^14.3.3",
     "eslint": "^9",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "15.1.5",
@@ -74,6 +79,7 @@
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "start-server-and-test": "^2.0.12",
     "stylelint": "^16.17.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^37.0.0",
