--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "preview": "npm run pages:build && wrangler pages dev",
     "deploy:cf": "npm run pages:build && wrangler pages deploy",
     "cypress:open": "cypress open",
-    "test:e2e:open": "start-server-and-test dev http://localhost:3000 cypress:open"
+    "test:e2e:open": "start-server-and-test dev http://localhost:3000 cypress:open",
+    "test": "jest --config=jest.config.ts",
+    "test:watch": "jest --config=jest.config.ts --watch"
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
@@ -34,7 +36,7 @@
     "eslint-plugin-next-on-pages": "^1.13.12",
     "ethers": "^6.13.5",
     "jotai": "^2.12.2",
-    "lightweight-charts": "^5.0.6",
+    "lightweight-charts": "^5.0.7",
     "lucide-react": "^0.487.0",
     "next": "15.1.5",
     "next-themes": "^0.4.6",
@@ -51,17 +53,26 @@
     "wagmi": "^2.14.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.0.9",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
     "@types/three": "^0.175.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
+    "babel-jest": "^29.7.0",
     "critters": "^0.0.25",
     "cypress": "^14.3.3",
     "eslint": "^9",
@@ -73,6 +84,9 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
@@ -82,6 +96,8 @@
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^37.0.0",
     "tailwindcss": "^4.0.9",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "5.7.3",
     "vercel": "^41.7.0",
     "wrangler": "^4.13.2"
