--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "web3-university-app",
+  "name": "web3-garden-app",
   "compatibility_date": "2024-09-23",
   "compatibility_flags": [
     "nodejs_compat"
