--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5",
     "viem": "^2.24.2",
-    "wagmi": "^2.14.16"
+    "wagmi": "^2.14.16",
+    "web-vitals": "^5.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
